fix for text being blurry
fixed text being blurry on banner

--- a/css/application.css
+++ b/css/application.css
@@ -74,6 +74,15 @@ body {
   margin: 31px 0px 18px;
 }
 
+/* line 3, ../xampp/htdocs/netmatters-homepage/scss/layout/_footer.scss */
+.footer-bottom {
+  width: 100%;
+  height: 82px;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+}
+
 /* line 3, ../xampp/htdocs/netmatters-homepage/scss/modules/_banner.scss */
 .container-banner {
   background-image: url("../images/main-netmatters/netmatters-office.png");
