--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,2 +1,9 @@
 //footer layout
 
+.footer-bottom {
+    width: 100%;
+    height: 82px;
+    display: flex;
+    flex-flow:column;
+    justify-content: space-between;
+}
